Configure seats service through serviceId including ribbon config. Add requests logging filter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,19 @@
 server.port=8080
+
+management.endpoints.web.exposure.include=*
+ribbon.eureka.enabled=false
+
+#films service
 zuul.routes.films.url=http://localhost:9090
 zuul.routes.films.path=/api/films/**
-zuul.routes.seats.url=http://localhost:9091
-zuul.routes.seats.path=/api/seats/**
-ribbon.eureka.enabled=false
+
+#seats service
+zuul.routes.echo.path=/api/seats/**
+zuul.routes.echo.serviceId=seats-service
+zuul.routes.echo.stripPrefix=true
+seats-service.ribbon.NIWSServerListClassName=com.netflix.loadbalancer.ConfigurationBasedServerList
+seats-service.ribbon.listOfServers=http://localhost:9091,http://localhost:9092
+seats-service.ribbon.ConnectTimeout=1000
+seats-service.ribbon.ReadTimeout=3000
+seats-service.ribbon.MaxTotalHttpConnections=500
+seats-service.ribbon.MaxConnectionsPerHost=100
