add config to make films tickets selection sevice accessible by zuul gateway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ seats-service.ribbon.ConnectTimeout=1000
 seats-service.ribbon.ReadTimeout=3000
 seats-service.ribbon.MaxTotalHttpConnections=500
 seats-service.ribbon.MaxConnectionsPerHost=100
+
+#films ticket selection service
+zuul.routes.films-tickets-selection.url=http://localhost:10000
+zuul.routes.films-tickets-selection.path=/api/filmsTicketsSelection/**
