--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,28 @@
 server.port=8080
+spring.application.name=cinema-zuul-gateway
+eureka.instance.preferIpAddress=true
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
 
 management.endpoints.web.exposure.include=*
-ribbon.eureka.enabled=false
+#ribbon.eureka.enabled=false
 
-#films service
-zuul.routes.films.url=http://localhost:9090
-zuul.routes.films.path=/api/films/**
-
-#seats service
-zuul.routes.echo.path=/api/seats/**
-zuul.routes.echo.serviceId=seats-service
-zuul.routes.echo.stripPrefix=true
-seats-service.ribbon.NIWSServerListClassName=com.netflix.loadbalancer.ConfigurationBasedServerList
-seats-service.ribbon.listOfServers=http://localhost:9091,http://localhost:9092
-seats-service.ribbon.ConnectTimeout=1000
-seats-service.ribbon.ReadTimeout=3000
-seats-service.ribbon.MaxTotalHttpConnections=500
-seats-service.ribbon.MaxConnectionsPerHost=100
-
-#films ticket selection service
-zuul.routes.films-tickets-selection.url=http://localhost:10000
-zuul.routes.films-tickets-selection.path=/api/filmsTicketsSelection/**
+##films service
+#zuul.routes.films.url=http://localhost:9090
+#zuul.routes.films.path=/api/films/**
+#
+##seats service
+#zuul.routes.echo.path=/api/seats/**
+#zuul.routes.echo.serviceId=seats-service
+#zuul.routes.echo.stripPrefix=true
+#seats-service.ribbon.NIWSServerListClassName=com.netflix.loadbalancer.ConfigurationBasedServerList
+#seats-service.ribbon.listOfServers=http://localhost:9091,http://localhost:9092
+#seats-service.ribbon.ConnectTimeout=1000
+#seats-service.ribbon.ReadTimeout=3000
+#seats-service.ribbon.MaxTotalHttpConnections=500
+#seats-service.ribbon.MaxConnectionsPerHost=100
+#
+##films ticket selection service
+#zuul.routes.films-tickets-selection.url=http://localhost:10000
+#zuul.routes.films-tickets-selection.path=/api/filmsTicketsSelection/**
